--- a/roles/bc-ipfs/defaults/main.yml
+++ b/roles/bc-ipfs/defaults/main.yml
@@ -3,7 +3,7 @@
 log_level: Info
 version: 0.0.0
 service_name: blockmed-bc-ipfs
-docker_registry: blcksync
+docker_registry: alblockmed
 docker_registry_path: /bc-ipfs
 base_path: /mnt
 service_port: 3000
